improvements of the UV scan UI

--- a/src/mzkit/mzkit/pages/dockWindow/explorer/frmUVScans.resx
+++ b/src/mzkit/mzkit/pages/dockWindow/explorer/frmUVScans.resx
@@ -603,4 +603,60 @@
         A+p3/j8YneKoTWWFKwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="ToolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>551, 17</value>
+  </metadata>
+  <metadata name="ImageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>658, 17</value>
+  </metadata>
+  <data name="ImageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAM
+        CgAAAk1TRnQBSQFMAgEBAgEAARABAAEQAQABFAEAARQBAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFQ
+        AwABFAMAAQEBAAEYBQABwAESGwAG/wP9A/YD9QP7A/4G/wP+A/gD9AP4A/4G/w8AA+wG6wbqBukG5wnm
+        CeWBAAP9A/UD8wPlAdIBdwEDAdIBdwEDAdIBdwEDA/IG8wPuAaQBUgEBAaQBUgEBAaQBUgEBA+8D8wP4
+        A/4MAAPtBuwG6wbqBugG5wnmA+WBAAP6ATsByQH/ATsByQH/ATMBrgHdAdIBdwEDAdIBdwEDAdIBdwED
+        AToBxwH8ATsByQH/ATsByQH/ATcBvQHwAaQBUwECAaQBUwECAaQBUwECATgBwQH0ATsByQH/AUEByAH7
+        A/4MAAPuA+0BsAGdAaABsQGeAaED7APrAaEBiQGMA+oB4gLgAakBkwGWA+kJ5wPmgQAD+gFFAcwB/wFF
+        AcwB/wE8AbEB3QHRAXcBAwHRAXcBAwHRAXcBAwFEAckB+wFFAcsB/gFFAcsB/gFAAb8B7wGkAVQBAgGk
+        AVQBAgGkAVQBAgFCAcQB9AFFAcwB/wFFAcwB/wP+DAAM7gPtBuwG6wbqCekD54EAA/oBTgHOAf8BTgHO
+        Af8BRAGzAd0B0QF3AQMB0QF3AQMB0QF3AQMBPwGmAc4BQAGoAdABQAGoAdABPQGiAcgBowFVAQMBowFV
+        AQMBowFVAQMBSwHFAfQBTgHOAf8BTgHOAf8D/gwABu8G7gHAAbEBswGxAZ8BoQbtAbkBqAGqAcIBtAG2
+        AawBlwGaAbQBowGlAbABngGgBumBAAP6AVcB0QH/AVcB0QH/AUsBtQHdAdABdgEDAdABdgEDAdABjgEi
+        AdABjgEiAdABjgEiAdABjgEiAdABjgEiAc4BjAEhAaMBVQEDAaMBVQEDAVMByAH0AVcB0QH/AVcB0QH/
+        A/4DAAPuAe8C7gHvAu4B8AfvAe4B8ALuAe8C7gHoAecB5gHvAu4B7wLuBu0B6QLoAekD6ALnA+sD6oEA
+        A/oBXgHTAf4BXgHTAf4BUwG6Ad8B0AF2AQMB2wGPAR0B2wGPAR0B2wGPAR0B2wGPAR0B2wGPAR0B2wGP
+        AR0B2wGPAR0B2QGOAR0BogFWAQMBWwHLAfQBXgHTAf4BXgHTBP4DABLzA/QD8wHsAesB6gbzBu4B5gHj
+        AeQD7QG+Aa8BsQPsA+uBAAP6AWQB1QH+AWQB1QH+AWABzAH0Ad8BjwEWAd8BjwEWAd8BjwEWAd8BjwEW
+        Ad8BjwEWAd8BjwEWAd8BjwEWAd8BjwEWAd8BjwEWAXYBswG2AWMB0gH7AWQB1QH+AWQB1QT+AwAB8wHy
+        AfEB8wHyAfEB8wHyAfEB8wHyAfEB8wLyAfMB8gPxAfAB8wHyAfEB6gHpAegB8wHyA/EB8APvA+4B6QLo
+        A+4BvgGwAbID7QPsgQAD+gFqAdYB/gFqAdYB/gFqAdYB/gFqAdUB/QFqAdUB/QFqAdUB/QFqAdUB/QFq
+        AdUB/QFqAdUB/QFqAdUB/QFqAdUB/QFqAdUB/QFqAdUB/QFqAdYB/gFqAdYB/gFqAdYE/gMAEu4C9QH2
+        A+4B7QHsAesD7gPzA/EG7wzugQAD+gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFu
+        AdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgE/gMA
+        EvwB9wL4A/wB7wLuA/wB+AL5A/MD8gGyAZ8BogPxAbEBngGgBu6BAAP6AXIB2QH9AXIB2QH9AXIB2QH9
+        AXIB2QH9AXIB2QH9AXIB2QH9AXIB2QH9AXIB2QH9AXIB2QH9AXIB2QH9AXIB2QH9AXIB2QH9AXIB2QH9
+        AXIB2QH9AXIB2QH9AXIB2QH9A/4DABL4A/oD+AHxAfAB7wb4A/QG8wbyA/ED74EAA/0BkQHAAawBkAG/
+        AawBcQGfAaUBcAGdAaUBjgG5AboBhQGpAbQBdAHaAf0BdAHaAf0BdAHaAf0BdAHaAf0BdAHaAf0BdAHa
+        Af0BdAHaAf0BdAHaAf0BdAHaAf0BdAHaAf0D/gMAAuMB4gLjAeIC4wHiAuMB4gLjAeIC4wHiAfsC/ALj
+        AeIB8QHwAe8C4wHiA/IB7AHpAeoBqgGVAZcJ9AbzhAABzQGrAT4BzQGrAT4BzQGrAUABzAGmAU0BywGh
+        AVsBygGcAWgBxQGVAXMBdgHaAfwBdgHaAfwBdgHaAfwBdgHaAfwBdgHaAfwBdgHaAfwBdgHaAfwBdgHa
+        AfwBegHaAfkD/gMAAf0C/AH9AvwB/QL8Af0C/AH9AvwB/QX8Af0C/AHzAfIB8QH9A/wC+wb2A/UG9gb3
+        gQAB6wHIAXgBzQGsAT8BzQGsAT8BzQGsAT8BzQGrAUMB1AHnAe8BywGhAV4BygGcAWwB4AGZAWcB4gG3
+        AXQB4AG0AXkB4AG0AX4DawHFAZIBUQGoAYMBWgNpA/4D/wMAAaMBbQFLAacBcQFOAawBdQFTAbMBfAFY
+        AboBggFdAcEBiQFjAcgBjwFoAc4BlAFsAdMBmAFxAdYBmwFzAdYBmwFzA/gBsgGfAaED+AP5AbMBoAGi
+        A/oD84QAASIBqAHcAc0BrQE/Ac0BrQE/Ac0BrQE/AdQB6AHvAcwBpgFUAegBsQF1A3gB6QHBAXAB6QG/
+        AXUDdAN1A3QDcgNxCQAB+AH3AfYB8wHwAu0B6QHmAecB4AHdAeIB2gHVAd8B1wHRAd8B1wHRAeAB2AHT
+        AeIB2QHUAeEB2AHWAfcB9QHzBvoJ+wPyA+aQAAHqAbwBVwHpAboBXwHoAbYBagN8A3sGeQN4A+wD4wNy
+        EgAG9wGzAaABogHTAcoBywGlAY4BkQP5BvoG+wGqAZUBlwOmA4sDigPxmQADgAN/A3wGewN4A3cDdRIA
+        BvgBqAGRAZQBvQGrAa0BqAGSAZUD+gb7BvwBsAGcAZ8DnQbwnAADvwa+A70DvAa7A7oSAAb5BvoG+wn8
+        A/0D9QOZA+/JAAb6BvsG/An9A/YD6gPy/wB1AAFCAU0BPgcAAT4DAAEoAwABUAMAARQDAAEBAQABAQUA
+        AfAXAAP/AQAB4AEAAR8BAAEBBwABwAEAAQ8BAAEBBwABwAEAAQ8BAAEBBwABwAEAAQ8BAAEBBwABwAEA
+        AQ8BAAEBBwABwAEAAQgBAAEBBwABwAEAAQgBAAEBBwABwAEAAQgBAAEBBwABwAEAAQgBAAEBBwABwAEA
+        AQgBAAEBBwABwAEAAQgBAAEBBwABwAEAAQgBAAEBBwAB4AEAAQgBAAEBBwABwAEAAQgBAAEBBwAB4AEA
+        ATgBAAEBBwAB/gEAAT8BAAEBBwAB/wHAAT8BAAEDBwAB/wHAAT8BAAEHBwAD/wEAAQ8HAAX/BwAL
+</value>
+  </data>
 </root>
